adding event control to sync with tcp server
