# swagger.json
@@ -22,6 +22,9 @@
   "servers": [
     {
       "url": "http://localhost:3000/api/v1"
+    },
+    {
+    "url": "https://laundro-tsb.localtunnel.thelaundro.com/api/v1"
     }
   ],
   "tags": [
@@ -46,7 +49,7 @@
     }
   ],
   "paths": {
-    "/lockers/{action_code}/outlet/{outlet_id}": {
+    "/lockers/{action_code}": {
       "get": {
         "security": [
           {
@@ -122,7 +125,7 @@
             "required": "true",
             "schema": {
               "type": "string",
-              "enum": ["UserOpen","OpenAll","StaffOpen","RiderOpen","StaffDeposit"]
+              "enum": ["OpenOne","OpenMultiple","NewOutlet"]
             },
             "example": "UserOpen"
           },
@@ -166,7 +169,7 @@
         }
       }
     },
-    "/lockers/{lockers_id}": {
+    "/locker/{lockers_name}": {
       "get": {
         "security": [
           {
@@ -176,9 +179,21 @@
         "tags": [
           "Locker"
         ],
-        "summary": "Get locker status by ID",
+        "parameters": [
+          {
+            "name": "Name",
+            "in": "path",
+            "description": "lockers name",
+            "required": "true",
+            "schema": {
+              "type": "string"      
+            },
+            "example": "locker1"            
+          }
+        ],
+        "summary": "Get locker status by Name",
         "description": "Multiple status values can be provided with comma separated strings",
-        "operationId": "getLockerStatusByID",
+        "operationId": "getLockerStatusByName",
         "responses": {
           "200": {
             "description": "successful operation",
@@ -713,16 +728,10 @@
         }
       },
       "LockerBody": {
-        "_id": "5df620ea0205b92ea96c82ec",
-        "name": "locker4",
-        "bitmask": 2048,
-        "lock": false,
-        "empty": false,
-        "create_date": "2019-12-25T13:13:03.730Z",
-        "outlet": {
-          "location": "TamanSungaiBesi",
-          "brand": "WashStudio"
-        }
+        "outlet": "outlet1",
+        "location": "Taman Sungai Besi",
+        "brand": "Wash Studio",  
+        "create_date": "2019-12-18T13:58:21.328Z"
       }
     },
     "securitySchemes": {
